# vllmocr

./: .gitignore  README.md  pyproject.toml
ocrv/: pyproject.toml  todo.md
ocrv/ocrv/: config.py  image_processing.py  llm_interface.py  main.py  prompts.py  utils.py
tests/: test_main.py
tests/data/: miseducation_4o-mini.md  miseducation_claude-3-5-haiku-latest.md  miseducation_claude-3-haiku-20240307.md  miseducation_gemma3.md  miseducation_google_gemma-3-27b-it_free.md  miseducation_minimax_minimax-01.md  miseducation_qwen_qwen-vl-plus.md  sample_4o-mini.md  sample_anthropic_claude-3-5-sonnet-20241022.md  sample_anthropic_claude-3-haiku-20240307.md  sample_gemini-2.0-flash.md  sample_google_gemma-3-27b-it_free.md  sample_haiku.md  sample_llava_7b.md  sample_minimax_minimax-01.md  sample_openai_gpt-4o-mini.md  sample_openai_gpt-4o.md  sample_sonnet.md
vllm_ocr/: pyproject.toml
vllm_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vllm_ocr/vllm_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vllmocr/: image_processing.py  llm_interface.py  main.py  prompts.py  utils.py
vllmocr/providers/: anthropic.py
