[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrv"
version = "0.1.0"
description = "OCR project using LLMs"
dependencies = [
    "pytest",
    "pytest-mock",
    "openai",
    "anthropic",
    "google-generativeai",
    "ollama",
    "requests",
    "fitz",  # This is PyMuPDF
    "PyMuPDF",
    "opencv-python-headless",
    "python-dotenv",
    "typing-extensions",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
