[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-ocr"
version = "0.2.0"
description = "OCR project using LLMs"
readme = "README.md"
keywords = ["ocr", "llm", "image processing", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # Assuming MIT License
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pytest",
    "pytest-mock",
    "openai",
    "anthropic",
    "google-generativeai",
    "ollama",
    "requests",
    "fitz",  # This is PyMuPDF
    "PyMuPDF",
    "opencv-python-headless",
    "python-dotenv",
    "typing-extensions",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
